--- a/teste.tex
+++ b/teste.tex
@@ -1,4 +1,7 @@
 \documentclass{article}
+\usepackage{tikz}
 \begin{document}
-Hello World.
+\begin{tikspicture}
+ \draw circle (1);
+\end{tikspicture}
 \end{document}
